[package]
name = "solana-wallet-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = "0.4"
colored = "2"
reqwest = { version = "0.11", features = ["json"] }